Selecting OptGroup label does not deselect selected item

https://bugs.webkit.org/show_bug.cgi?id=257553

Reviewed by Aditya Keerthi.

This patch aligns WebKit with Blink / Chromium and Gecko / Firefox.

Merge: https://src.chromium.org/viewvc/blink?view=revision&revision=171470

In 'listbox' selected item should not get deselected, upon clicking
on 'optgroup' label. This patch adds return for 'selected' item
to not update if there is 'optGroup'.

* Source/WebCore/html/HTMLSelectElement.cpp:
(HTMLSelectElement::updateSelectedState): As above
* LayoutTests/fast/forms/select/optgroup-clicking.html: Add new sub-test
* LayoutTests/fast/forms/select/optgroup-clicking-expected.txt: Add new sub-test expectation

Canonical link: https://commits.webkit.org/264767@main